Really resize, by watching for the right object's resize event

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         });
     };
 
-    $(document).resize(function () {
+    $(window).resize(function () {
         $('#hi').centerize();
     });
 
