--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         color: white;
         height: 100%;
     }
+    #squiddle {
+        position: absolute;
+        right: 0;
+        bottom: 20px;
+        opacity: 0.3;
+    }
     #hi {
         position: absolute;
         width: 500px;
@@ -27,6 +33,10 @@
     }
     </style>
 </head><body>
+
+    <div id="squiddle">
+        <img src="ghost-white_32.png" width="320" height="320">
+    </div>
 
     <div id="hi">
         <h1 id="title"></h1>
