Don't even pretend we'll have a previous link

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div id="hi">
         <h1><a href="#" target="_new" id="title"></a></h1>
         <div id="player"></div>
-        <p>&larr; <a href="#" id="play-next">&rarr;</a></p>
+        <p><a href="#" id="play-next">&rarr;</a></p>
     </div>
 
     <script type="text/javascript">
